SF Bootcamp/force-app/main/default/objects/Leave__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <filterItems>
            <field>$User.ManagerId</field>
            <operation>equals</operation>
            <valueField>User.Id</valueField>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Manager</value>
        </filterItems>
        <filterItems>
            <field>$User.Id</field>
            <operation>notEqual</operation>
            <valueField>User.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Leaves</relationshipName>
    <type>Lookup</type>
</CustomField>