SF Bootcamp/force-app/main/default/objects/Leave__c/fields/Leave_Duration__c.field-meta.xml
<CustomField>
    <fullName>Leave_Duration__c</fullName>
    <formula>( Leave_End_Date__c -  Leave_Start_Date__c )+ 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>