SF Bootcamp/force-app/main/default/objects/Leave__c/fields/Leave_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Leave_Start_Date__c</fullName>
    <label>Leave Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>