SF Bootcamp/force-app/main/default/objects/Leave__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <label>Leave Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sick Leave</fullName>
            </value>
            <value>
                <fullName>Vacation Leave</fullName>
            </value>
            <value>
                <fullName>Emergency Leave</fullName>
                <isActive>false</isActive>
                <label>Emergency Leave</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>