SF Bootcamp/force-app/main/default/objects/Leave__c/validationRules/Leave_Start_Date_and_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Leave_Start_Date_and_End_Date</fullName>
    <active>true</active>
    <description>Leave end date should not be earlier than start date.</description>
    <errorConditionFormula>IF( Leave_End_Date__c &lt;  Leave_Start_Date__c, TRUE, FALSE )</errorConditionFormula>
    <errorDisplayField>Leave_End_Date__c</errorDisplayField>
    <errorMessage>Leave ending date should not be earlier than the starting date.</errorMessage>
</ValidationRule>