SF Bootcamp/force-app/main/default/objects/Leave__c/validationRules/New_Leaves_should_be_Draft.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Leaves_should_be_Draft</fullName>
    <active>true</active>
    <description>Newly created leaves should be first set to draft.</description>
    <errorConditionFormula>IF( ISNEW(),  
    IF( ISPICKVAL( Leave_Status__c , &#39;DRAFT&#39;), FALSE, TRUE)  , FALSE )</errorConditionFormula>
    <errorMessage>Please set your leave status to draft.</errorMessage>
</ValidationRule>