SF Bootcamp/force-app/main/default/objects/Leave__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Leave_Start_Date__c</columns>
    <columns>Leave_End_Date__c</columns>
    <columns>Leave_Duration__c</columns>
    <columns>Leave_Status__c</columns>
    <columns>Approver__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>